--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,3 +1,13 @@
+@media screen and (max-width: 1400px) {
+    #profile {
+        height: 83vh;
+        margin-bottom: 6rem;
+    }
+    .about-containers {
+        flex-wrap: wrap;
+    }
+}
+
 @media screen and (max-width: 1200px) {
     #desktop-nav {
         display: none;
@@ -5,4 +15,13 @@
     #mobile-nav {
         display: flex;
     }
+    #experience, 
+    .experience-details-container {
+        margin-top: 2rem;
+    }
+    #profile,
+    .section-container {
+        display: block;
+    }
 }
+
