--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 1rem;
 }
 .btn {
@@ -273,7 +274,7 @@ section {
 }
 
 .about-pic {
-    border-radius: 2rem;
+    border-radius: 50%;
 }
 
 .arrow {
