--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -46,10 +46,17 @@
     }
 }
 
-@media screen and (max-width: 600px) {
-    #contact, footer {
-        height: 40vh;
+@media screen and (max-width: 865px) {
+    .project-title {
+        font-size: 0.9rem;
     }
+}
+
+@media screen and (max-width: 600px) {
+    #contact {
+        height: 70vh;
+    }
+
     #profile {
         height: 83vh;
         margin-bottom: 0;
@@ -57,14 +64,16 @@
     article {
         font-size: 1rem;
     }
+
+    .article-container div{
+        flex-direction: column;
+    }
+
     footer nav {
         height: fit-content;
         margin-bottom: 2rem;
     }
-    .article-container {
-        flex-direction: column;
-        align-items: center;
-    }
+
     .about-containers,
     .contact-info-upper-container,
     .btn-container {
@@ -82,7 +91,7 @@
         font-size: 1rem;
     }
     .experience-sub-title {
-        font-size: 1.25rem;
+        font-size: 0.8rem;
     }
     .logo {
         font-size: 1.5rem;
