--- a/style.css
+++ b/style.css
@@ -398,6 +398,7 @@ section {
     flex-direction: column;
     gap: 2.5rem;
     justify-content: space-around;
+    align-items: center;
 }
 .article-container div{
     display: flex;
